# salamander

./: CMakeLists.txt  README  README.md  TODO  TODO.txt  binary_morphology.cpp  binary_morphology.cxx  binary_threshold.cpp  binary_threshold.cxx  blob.cxx  blob.h  blobs.cpp  blobs.h  chunks.cpp  chunks.cxx  chunks.h  detect.cpp  detect.cxx  files.cpp  files.cxx  files.h  filter.cpp  filter.cxx  salamander.cpp  salamander.cxx  salamander.h  segment.cpp  segment.cxx  test.cxx  threshold.cxx
doc/: brainstorming.tex  salamander.tex
ex/one/: do  filenames
nice_try/: detect.cxx  detects_with_master.cxx
opencv/: CMakeCache.txt  CMakeLists.txt  binmorph.cpp  binthresh.cpp  boo.cpp  cc.cpp  delta.cpp  detect.cpp
